       circuit and its associated plots. This comes from an old function
       written by M. Widlok and updated by A. Roldan for espice.
       Note: I have changed the code to eliminate GTK functions and tested.
       Things work but in ngspice there is a problem due to model redefinitions,
       as it seems that in ngspice models are globals. Need further 
       investigation. P. Nenzi 

 * src/frontend/commands.c, src/frontend/misccomms.c:
   24: Added the parameter "noask" to quit command to avoid the question
       before exiting ngspice. A. Roldan - Espice
  
   
2008-10-09 Paolo Nenzi --espice-integration
 * src/spicelib/devices/vsrc/vsrc.c,
 * src/spicelib/devices/isrc/isrc.c,
 * src/frontend/spiceif.c,
 * src/frontend/device.c,
 * src/frontend/postcoms.c,
 * src/frontend/vectors.c:
   17: New capability of print command. It is now possible to print and
       alter vectors of reals like print @vin_sin[sin] to print the vector
       of parameters defining the sinusoidal source (it works with both the 
       sources type). It is possible to alter the parameters with the command
       alter @vin_sin[sin] = ( 1 1 3000Hz ). A. Roldan -Espice
       Note: alter syntax does not work in full yet, it still generate an
       error but modifies the parameters. P. Nenzi  

2008-10-08 Paolo Nenzi --espice-integration
 * src/frontend/vectors.c:
   57: Fixed  I(vx), before the if I(*) (upper case) was not recognized as the
       function to plot the current of vx. A. Roldan - Espice
 * src/frontend/postcoms.c:
   7:  Fixed plot number after "destroy all" command. A. Roldan - Espice 
 * src/include/fteext.h
 * src/frontend/evaluate.c, src/frontend/cpitf.c, src/frontend/parse.c 
 * src/maths/cmaths/cmath2.c, src/cmaths/cmath4.c, src/cmaths/cmath4.h:
   16: New function to compute the group delay has been implemented.
       Group delay is defined as -(dphase/dfrequency) and can be printed or